--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,6 +38,7 @@ html {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   background-color: var(--main-gray);
   border-radius: 10px;
+  border: 2px solid  var(--main-blue);
 }
 
 ::-webkit-scrollbar {
@@ -47,6 +48,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
+  border: 1px solid  var(--main-white);
   border-radius: 10px;
   background-color: var(--main-blue);
 }
