Form Component created and fields validations done

--- a/client/src/components/controls/fields/input/base-field.scss
+++ b/client/src/components/controls/fields/input/base-field.scss
@@ -35,5 +35,10 @@
       color: var(--main-red);
       margin-left: 1rem;
     }
+
+    &__required {
+      color: var(--main-red);
+      margin-left: 1rem;
+    }
   }
 }
