Github icon color change

--- a/client/src/components/footer-content.scss
+++ b/client/src/components/footer-content.scss
@@ -9,6 +9,10 @@
   .fa-linkedin {
     color: #0273b1;
   }
+
+  .fa-github {
+    color: #000000;
+  }
   
   .fa-envelope {
     color: var(--main-red);
