--- a/client/src/components/controls/buttons/button.scss
+++ b/client/src/components/controls/buttons/button.scss
@@ -9,9 +9,9 @@
   cursor: pointer;
   outline: none;
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.4);
-  opacity: 90%;
+  opacity: 85%;
 
-  &:hover {
+  &:hover, &:focus {
     opacity: 100%;
   }
 
