--- a/client/src/components/general/card.scss
+++ b/client/src/components/general/card.scss
@@ -26,6 +26,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0.625rem;
   }
 
   &__image {
@@ -37,13 +38,14 @@
     height: 1.5rem;
     margin: 0.5rem 0 0.5rem;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: nowrap;
     align-items: center;
     gap: 0.5rem;
   }
   
   &__description {
+    text-align: center;
     font-size: 1.2rem;
     font-weight: bold;
     color: var(--main-green);
@@ -58,7 +60,7 @@
     justify-content: space-around;
     flex-wrap: nowrap;
     align-items: center;
-    gap: 20px;
+    gap: 0.625rem;
   }
   
   &__buttons > a > button {
