--- a/client/src/components/sections/projects-section.scss
+++ b/client/src/components/sections/projects-section.scss
@@ -8,20 +8,25 @@
   &__header {
     font-size: 2.5rem;
     padding-top: 3rem;
-    margin: 0 auto 3rem auto;
+    margin: 0 auto 1.5rem auto;
     max-width: 35rem;
     border-bottom: 0.2rem solid;
     text-align: center;
   }
   
   &__cards {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
-    overflow-x: auto;
-    padding: 1.875rem 0;
-  }
-  
-}
+    // display: flex;
+    // justify-content: space-evenly;
+    // align-items: center;
+    // flex-direction: row;
+    // overflow-x: auto;
+    // padding: 1.875rem 0;
+    // margin: 20px 0 20px 0;
 
+    &-item {
+      display: flex;
+      justify-content: center;
+      padding: 30px 0 30px 0;
+    }
+  }  
+}
