Codewars badge fade in / out animation improved

--- a/client/src/components/footer-content.scss
+++ b/client/src/components/footer-content.scss
@@ -25,13 +25,25 @@
   }
 
   @-webkit-keyframes fadeinout {
-    0%,100% { opacity: 0.4; }
-    50% { opacity: 1; }
+    0%,100% { 
+      opacity: 0.4;
+      width: 110px;
+    }
+    50% { 
+      opacity: 1;
+      width: 120px;
+    }
   }
 
   @keyframes fadeinout {
-    0%,100% { opacity: 0.4; }
-    50% { opacity: 1; }
+    0%,100% {
+      opacity: 0.4;
+      width: 110px;
+    }
+    50% {
+      opacity: 1;
+      width: 120px;
+    }
   }
 }
 
