--- a/client/src/components/sections/welcome-section.scss
+++ b/client/src/components/sections/welcome-section.scss
@@ -3,10 +3,8 @@
 .welcome-section {
   height: 100vh;
   padding-top: 2.6rem;
-  background: linear-gradient(45deg, rgb(118, 201, 255), rgb(247, 255, 222));
   position: relative;
   z-index: -2;
-  /* background: linear-gradient(45deg, rgb(118, 201, 255), rgb(247, 255, 222)); */
 
   display: flex;
   justify-content: center;
@@ -14,11 +12,19 @@
   flex-direction: column;
   flex-wrap: nowrap;
 
+  &-dark {
+    background: linear-gradient(90deg, #333333, #888888);
+  }
+
+  &-light {
+    background: linear-gradient(45deg, rgb(118, 201, 255), rgb(247, 255, 222));
+  }
+
   &__text-container {
     text-align: center;
     position: absolute;
     z-index: 2;
-    top: calc(20%);
+    top: calc(10%);
   }
     
   &__text-hi {
@@ -30,10 +36,9 @@
     color: #800080; /*var(--main-red); */ /* var(--main-blue); */
   }
 
-  &__sun {
+  &__main-star {
     width: 10rem;
     height: 10rem;
-    background-color: #ffff00;
     border-radius: 50%;
     position: absolute;
     top: 1.25rem;
@@ -41,9 +46,60 @@
     z-index: -1;
   }
 
+  &__sun {
+    background-color: #ffff00;
+  }
+
+  &__moon {
+    background-color: hsl(0, 0%, 80%);
+    opacity: 1;
+    .crater {
+      border-radius: 50%;
+      background: linear-gradient(45deg, hsl(0, 0%, 80%), hsl(0, 0%, 70%));
+      position: absolute;
+    }
+    
+    .crater:nth-child(1) {
+      width: 30px;
+      height: 30px;
+      top: 25%;
+      left: 15%;
+    }
+            
+    .crater:nth-child(2) {
+      width: 40px;
+      height: 40px;
+      top: 40%;
+      right: 30%;
+    }
+
+    .crater:nth-child(3) {
+      width: 12px;
+      height: 12px;
+      top: 60%;
+      left: 45%;
+    }
+
+    .crater:nth-child(4) {
+      width: 22px;
+      height: 22px;
+      top: 70%;
+      left: 20%;
+    }
+  }
 
   &__waves {
     height: 100%;
     width: 100%;
+  }
+
+  &__star {
+    background: white;
+    position: absolute;
+    border-radius: 50%;
+    z-index: -2;
+    // Variable
+    // width: 4px;
+    // height: 4px;
   }
 }
