--- a/client/src/components/sections/welcome-section.scss
+++ b/client/src/components/sections/welcome-section.scss
@@ -2,6 +2,7 @@
 
 .welcome-section {
   height: 100vh;
+  width: 100vw;
   padding-top: 2.6rem;
   position: relative;
   z-index: -2;
@@ -91,6 +92,8 @@
   &__waves {
     height: 100%;
     width: 100%;
+    position: absolute;
+    top: 368px;
   }
 
   &__star {
