--- a/client/src/components/containers/panel.scss
+++ b/client/src/components/containers/panel.scss
@@ -3,6 +3,6 @@
   height: fit-content;
 
   background-color: var(--main-white);
-  border-radius: 1.5rem;
-  padding: 0.625rem;
+  border-radius: 1.5em;
+  padding: 0.625em;
 }
