--- a/client/src/components/controls/buttons/button.scss
+++ b/client/src/components/controls/buttons/button.scss
@@ -1,11 +1,11 @@
 .button {
-  font-size: 1.4rem;
+  font-size: 1.4em;
   font-weight: bold;
-  padding: 0.8rem;
+  padding: 0.8em;
   background-color: var(--main-red);
   color: var(--main-white);
   border: none;
-  border-radius: 1.3rem;
+  border-radius: 1.3em;
   cursor: pointer;
   outline: none;
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.4);
