--- a/client/src/components/general/tag.scss
+++ b/client/src/components/general/tag.scss
@@ -2,10 +2,10 @@
   text-decoration: none;
 
   &__span {
-    font-size: 0.7rem;
+    font-size: 0.7em;
     font-weight: bold;
-    border-radius: 1.25rem;
-    padding: 0.125rem 0.5rem;
+    border-radius: 1.25em;
+    padding: 0.125em 0.5em;
     color: var(--main-white);
   }
 }
