--- a/client/src/components/sections/contact-section.scss
+++ b/client/src/components/sections/contact-section.scss
@@ -4,34 +4,38 @@
   background: linear-gradient(180deg, var(--main-blue) 0%, var(--main-green) 100%);
   color: var(--main-white);
   min-height: 80vh;
-  padding-bottom: 3rem;
+  padding-bottom: 3em;
   
   &__header {
-    font-size: 2.5rem;
-    padding-top: 3rem;
-    margin: 0 auto 3rem auto;
-    max-width: 16rem; /* este es el unico distinto de project-section-header */ 
-    border-bottom: 0.2rem solid;
+    font-size: 3em;
+    padding-top: .5em;
+    margin: 0 auto 0.5em auto;
+    max-width: 6em; /* este es el unico distinto de project-section-header */ 
+    border-bottom: 0.1em solid;
     text-align: center;
   }
-  
-  .contact-form {
-    width: 35rem;
-    margin: 0 auto;
-    overflow: auto;
-    
-    &__fieldset {
-      border: none;
-      display: flex;
-      flex-direction: column;
-      gap: 1.25rem;
-      margin-bottom: 1.25rem;
+
+  &__form {
+    padding: 2em 0 2em 0;
+
+    .contact-form {
+      width: 35em;
+      margin: 0 auto;
+      overflow: auto;
+      
+      &__fieldset {
+        border: none;
+        display: flex;
+        flex-direction: column;
+        gap: 1.25em;
+        margin-bottom: 1.25em;
+      }
+
+      button[type=submit] {
+        width: 12.5em;
+        float: right;
+      }
     }
   }
-}
-
-
-button[type=submit] {
-  width: 12.5rem;
-  float: right;
+  
 }
