--- a/client/src/components/sections/welcome-section.scss
+++ b/client/src/components/sections/welcome-section.scss
@@ -25,15 +25,15 @@
     text-align: center;
     position: absolute;
     z-index: 2;
-    top: calc(10%);
+    top: calc(20%);
   }
     
   &__text-hi {
-    font-size: 5rem;
+    font-size: 4em;
   }
   
   &__text-web-dev {
-    font-size: 1.5rem;
+    font-size: 1.4em;
     color: #800080; /*var(--main-red); */ /* var(--main-blue); */
   }
 
