Minor CSS fix: Underline instead of border bottom

--- a/client/src/components/sections/contact-section.scss
+++ b/client/src/components/sections/contact-section.scss
@@ -11,7 +11,7 @@
     padding-top: .5em;
     margin: 0 auto 0.5em auto;
     max-width: 6em; /* este es el unico distinto de project-section-header */ 
-    border-bottom: 0.1em solid;
+    text-decoration: underline;
     text-align: center;
   }
 
