--- a/client/src/components/sections/projects-section.scss
+++ b/client/src/components/sections/projects-section.scss
@@ -10,7 +10,7 @@
     padding-top: .5em;
     margin: 0 auto 0.5em auto;
     max-width: 14em;
-    border-bottom: 0.1em solid;
+    text-decoration: underline;
     text-align: center;
   }
   
