--- a/client/src/components/footer-content.scss
+++ b/client/src/components/footer-content.scss
@@ -1,10 +1,10 @@
 .social-links {
-  font-size: 2.5rem;
-  margin: .5rem 1rem;
+  font-size: 2.5em;
+  margin: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  gap: 1.25rem;
+  gap: 1rem;
   
   .profile-link {
     display: flex;
