--- a/client/src/index.css
+++ b/client/src/index.css
@@ -101,6 +101,12 @@ code {
 
 @media screen and (max-width: 433px) {
   * {
+    font-size: 9px;
+  }
+}
+
+@media screen and (max-width: 216px) {
+  * {
     font-size: 8px;
   }
 }
