Minor change in theme toggle icon to add it opacity

--- a/client/src/components/bars/nav-bar.scss
+++ b/client/src/components/bars/nav-bar.scss
@@ -26,6 +26,7 @@
       display: flex;
       padding: 0 1em 0 1em;
       cursor: pointer;
+      opacity: 0.4;
       
       @-webkit-keyframes fadeinout-theme-icon {
         0%,100% { 
