--- a/client/src/components/sections/welcome-section.scss
+++ b/client/src/components/sections/welcome-section.scss
@@ -26,16 +26,16 @@
     position: absolute;
     z-index: 2;
     top: calc(20%);
-  }
+
+    .welcome-section__text-hi {
+      font-size: 4em;
+    }
     
-  &__text-hi {
-    font-size: 4em;
-  }
-  
-  &__text-web-dev {
-    font-size: 1.4em;
-    color: #800080; /*var(--main-red); */ /* var(--main-blue); */
-  }
+    .welcome-section__text-web-dev {
+      font-size: 1.4em;
+      color: #800080; /*var(--main-red); */ /* var(--main-blue); */
+    }
+  }  
 
   &__main-star {
     width: 10em;
@@ -90,14 +90,147 @@
     }
   }
 
-  &__waves {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 368px;
+  &__clouds {
+    & .cloud {
+      background: #fff;
+      background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
+      background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+      background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+      background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+      background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+  
+      -webkit-border-radius: 100px;
+      -moz-border-radius: 100px;
+      border-radius: 100px;
+  
+      -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  
+      height: 120px;
+      position: absolute;
+      width: 350px;
+    
+      &:after, &:before {
+        background: #fff;
+        content: '';
+        position: absolute;
+        z-indeX: -1;
+      }
+    
+      &:after {
+        -webkit-border-radius: 100px;
+        -moz-border-radius: 100px;
+        border-radius: 100px;
+    
+        height: 100px;
+        left: 50px;
+        top: -50px;
+        width: 100px;
+      }
+    
+      &:before {
+        -webkit-border-radius: 200px;
+        -moz-border-radius: 200px;
+        border-radius: 200px;
+    
+        width: 180px;
+        height: 180px;
+        right: 50px;
+        top: -90px;
+      }
+
+      /* KEYFRAMES */
+    
+      @-webkit-keyframes animateCloud {
+        0% {
+          left: -400px;
+        }
+        100% { 
+          left: 100%; 
+        }
+      }
+    
+      @-moz-keyframes animateCloud {
+        0% {
+          left: -400px;
+        }
+        100% { 
+          left: 100%; 
+        }
+      }
+    
+      @keyframes animateCloud {
+        0% {
+          left: -400px;
+        }
+        100% { 
+          left: 100%; 
+        }
+      }
+    
+      /* ANIMATIONS */
+
+      &.x1 {
+        -webkit-animation: animateCloud 19s linear infinite;
+        -moz-animation: animateCloud 19s linear infinite;
+        animation: animateCloud 19s linear infinite;
+    
+        -webkit-transform: scale(0.65);
+        -moz-transform: scale(0.65);
+        transform: scale(0.65);
+        top:200px;
+      }
+    
+      &.x2 {
+        -webkit-animation: animateCloud 16s linear infinite;
+        -moz-animation: animateCloud 16s linear infinite;
+        animation: animateCloud 16s linear infinite;
+    
+        -webkit-transform: scale(0.3);
+        -moz-transform: scale(0.3);
+        transform: scale(0.3);
+        top: 270px;
+      }
+    
+      &.x3 {
+        -webkit-animation: animateCloud 21s linear infinite;
+        -moz-animation: animateCloud 21s linear infinite;
+        animation: animateCloud 21s linear infinite;
+    
+        -webkit-transform: scale(0.5);
+        -moz-transform: scale(0.5);
+        transform: scale(0.5);
+        top: 330px;
+      }
+    
+      &.x4 {
+        -webkit-animation: animateCloud 22s linear infinite;
+        -moz-animation: animateCloud 22s linear infinite;
+        animation: animateCloud 22s linear infinite;
+    
+        -webkit-transform: scale(0.4);
+        -moz-transform: scale(0.4);
+        transform: scale(0.4);
+        top: 160px;
+      }
+    
+      &.x5 {
+        -webkit-animation: animateCloud 25s linear infinite;
+        -moz-animation: animateCloud 25s linear infinite;
+        animation: animateCloud 25s linear infinite;
+    
+        -webkit-transform: scale(0.55);
+        -moz-transform: scale(0.55);
+        transform: scale(0.55);
+        top: 120px;
+      }
+    }
   }
 
-  &__star {
+  &__stars {
     background: white;
     position: absolute;
     border-radius: 50%;
@@ -160,5 +293,12 @@
         opacity: 0;
       }
     }
+  }
+
+  &__waves {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 368px;
   }
 }
