--- a/client/src/components/sections/welcome-section.scss
+++ b/client/src/components/sections/welcome-section.scss
@@ -328,7 +328,7 @@
     }
 
     &.shining {
-      animation: shine 1.5s infinite ease-in-out;
+      animation: pulsate 1.5s infinite ease-in-out, shine 1.5s infinite ease-in-out;
 
       &::before, &::after {
         transform: translate(-50%, -50%);
@@ -350,7 +350,7 @@
 
       @keyframes shine {
         from {
-          transform: scale(0.4);
+          transform: scale(0.6);
         }
         to {
           transform: scale(1.2);
