--- a/client/src/components/general/card.scss
+++ b/client/src/components/general/card.scss
@@ -15,7 +15,12 @@
   }
 
   &__title {
-    color: var(--main-blue);
+    &.light {
+      color: var(--main-blue);
+    }
+    &.dark {
+      color: #5DC2B1;
+    }
     font-size: 1.6em;
     font-weight: bold;
     text-align: center;
@@ -53,7 +58,12 @@
     text-align: center;
     font-size: 1.2em;
     font-weight: bold;
-    color: var(--main-green);
+    &.light {
+      color: var(--main-green);
+    }
+    &.dark {
+      color: #000080;
+    }
   
     height: 94px;
   }
