--- a/client/src/components/sections/contact-section.scss
+++ b/client/src/components/sections/contact-section.scss
@@ -4,13 +4,14 @@
 
   &.dark {
     background: #333333;
+    color: #5DC2B1;
   }
 
   &.light {
     background: #7AA9BD;
+    color: var(--main-white);
   }
 
-  color: var(--main-white);
   min-height: 80vh;
   padding-bottom: 3em;
   
