--- a/client/src/components/controls/buttons/button.scss
+++ b/client/src/components/controls/buttons/button.scss
@@ -18,4 +18,10 @@
   &:active {
     box-shadow: none;
   }
+
+  &:disabled {
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: 50%;
+  }
 }
