--- a/client/src/components/general/card.scss
+++ b/client/src/components/general/card.scss
@@ -49,9 +49,10 @@
     margin: 0.5em 0 0.5em;
     display: flex;
     justify-content: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
     gap: 0.5em;
+    overflow: hidden;
   }
   
   &__description {
