--- a/client/src/components/sections/contact-section.scss
+++ b/client/src/components/sections/contact-section.scss
@@ -16,6 +16,7 @@
   padding-bottom: 3em;
   
   &__header {
+    color: var(--main-red);
     font-size: 3em;
     padding-top: .5em;
     margin: 0 auto 0.5em auto;
