--- a/client/src/components/sections/projects-section.scss
+++ b/client/src/components/sections/projects-section.scss
@@ -15,6 +15,7 @@
   min-height: 50vh;
 
   &__header {
+    color: var(--main-red);
     font-size: 3em;
     padding-top: .5em;
     margin: 0 auto 0.5em auto;
