--- a/client/src/components/containers/panel.scss
+++ b/client/src/components/containers/panel.scss
@@ -2,6 +2,8 @@
   width: fit-content;
   height: fit-content;
 
+  border: .2px solid gray;
+
   &.light {
     background-color: var(--main-white);
   }
