--- a/client/src/components/general/card.scss
+++ b/client/src/components/general/card.scss
@@ -19,7 +19,7 @@
       color: var(--main-blue);
     }
     &.dark {
-      color: #5DC2B1;
+      color: #000080;
     }
     font-size: 1.6em;
     font-weight: bold;
