--- a/client/src/components/sections/contact-section.scss
+++ b/client/src/components/sections/contact-section.scss
@@ -6,17 +6,16 @@
   padding-bottom: 3em;
 
   &.dark {
-    background: #333333;
+    background: linear-gradient(0deg, #888888, #333333);
     color: #5DC2B1;
   }
 
   &.light {
-    background: #7AA9BD;
-    color: var(--main-white);
+    background: linear-gradient(0deg, rgb(247, 255, 222), rgb(118, 201, 255));
+    color: var(--main-red);
   }
 
   &__header {
-    color: var(--main-red);
     font-size: 3em;
     padding-top: .5em;
     margin: 0 auto 0.5em auto;
@@ -45,5 +44,4 @@
       }
     }
   }
-  
 }
