--- a/client/src/components/sections/welcome-section.scss
+++ b/client/src/components/sections/welcome-section.scss
@@ -60,14 +60,14 @@
 
   &__sun {
     background-color: #ffff00;
-    border: 0.1875rem solid #ffc000;
+    border: .1875rem solid #ffc000;
     animation: transform-scale-xy 1s ease-in-out infinite;
     .ray-of-sunshine {
-      height: 0.25em;
+      height: .25em;
       width: 5em;
       background: linear-gradient(90deg, #88DDFF, #FFFF00);
       position: relative;
-      opacity: 0.2;
+      opacity: .2;
       right: 0;    
 
       &.x1 {
@@ -144,17 +144,17 @@
       background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
   
-      -webkit-border-radius: 100px;
-      -moz-border-radius: 100px;
-      border-radius: 100px;
+      -webkit-border-radius: 6.25em;
+      -moz-border-radius: 6.25em;
+      border-radius: 6.25em;
   
-      -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-      -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-      box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+      -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, .1);
+      -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, .1);
+      box-shadow: 0 8px 5px rgba(0, 0, 0, .1);
   
-      height: 120px;
+      height: 7.5em;
       position: absolute;
-      width: 350px;
+      width: 21.875em;
     
       &:after, &:before {
         background: #fff;
@@ -164,32 +164,32 @@
       }
     
       &:after {
-        -webkit-border-radius: 100px;
-        -moz-border-radius: 100px;
-        border-radius: 100px;
+        -webkit-border-radius: 6.25em;
+        -moz-border-radius: 6.25em;
+        border-radius: 6.25em;
     
-        height: 100px;
-        left: 50px;
-        top: -50px;
-        width: 100px;
+        height: 6.25em;
+        left: 3.125em;
+        top: -3.125em;
+        width: 6.25em;
       }
     
       &:before {
-        -webkit-border-radius: 200px;
-        -moz-border-radius: 200px;
-        border-radius: 200px;
+        -webkit-border-radius: 12.5em;
+        -moz-border-radius: 12.5em;
+        border-radius: 12.5em;
     
-        width: 180px;
-        height: 180px;
-        right: 50px;
-        top: -90px;
+        width: 11.25em;
+        height: 11.25em;
+        right: 3.125em;
+        top: -5.625em;
       }
 
       /* KEYFRAMES */
     
       @-webkit-keyframes animateCloud {
         0% {
-          left: -400px;
+          left: -25em;
         }
         100% { 
           left: 100%; 
@@ -198,7 +198,7 @@
     
       @-moz-keyframes animateCloud {
         0% {
-          left: -400px;
+          left: -25em;
         }
         100% { 
           left: 100%; 
@@ -207,7 +207,7 @@
     
       @keyframes animateCloud {
         0% {
-          left: -400px;
+          left: -25em;
         }
         100% { 
           left: 100%; 
@@ -221,10 +221,10 @@
         -moz-animation: animateCloud 19s linear infinite;
         animation: animateCloud 19s linear infinite;
     
-        -webkit-transform: scale(0.65);
-        -moz-transform: scale(0.65);
-        transform: scale(0.65);
-        top:200px;
+        -webkit-transform: scale(.65);
+        -moz-transform: scale(.65);
+        transform: scale(.65);
+        top: 12.5em;
       }
     
       &.x2 {
@@ -232,10 +232,10 @@
         -moz-animation: animateCloud 16s linear infinite;
         animation: animateCloud 16s linear infinite;
     
-        -webkit-transform: scale(0.3);
-        -moz-transform: scale(0.3);
-        transform: scale(0.3);
-        top: 270px;
+        -webkit-transform: scale(.3);
+        -moz-transform: scale(.3);
+        transform: scale(.3);
+        top: 16.875em;
       }
     
       &.x3 {
@@ -243,10 +243,10 @@
         -moz-animation: animateCloud 21s linear infinite;
         animation: animateCloud 21s linear infinite;
     
-        -webkit-transform: scale(0.5);
-        -moz-transform: scale(0.5);
-        transform: scale(0.5);
-        top: 330px;
+        -webkit-transform: scale(.5);
+        -moz-transform: scale(.5);
+        transform: scale(.5);
+        top: 20.625em;
       }
     
       &.x4 {
@@ -254,10 +254,10 @@
         -moz-animation: animateCloud 22s linear infinite;
         animation: animateCloud 22s linear infinite;
     
-        -webkit-transform: scale(0.4);
-        -moz-transform: scale(0.4);
-        transform: scale(0.4);
-        top: 160px;
+        -webkit-transform: scale(.4);
+        -moz-transform: scale(.4);
+        transform: scale(.4);
+        top: 10em;
       }
     
       &.x5 {
@@ -265,10 +265,10 @@
         -moz-animation: animateCloud 25s linear infinite;
         animation: animateCloud 25s linear infinite;
     
-        -webkit-transform: scale(0.55);
-        -moz-transform: scale(0.55);
-        transform: scale(0.55);
-        top: 120px;
+        -webkit-transform: scale(.55);
+        -moz-transform: scale(.55);
+        transform: scale(.55);
+        top: 7.5em;
       }
     }
   }
@@ -281,14 +281,14 @@
 
     &.shoting {
       position: absolute;
-      width: 4px;
+      width: .25em;
       border-radius: 50%;
     }
     
     &.shoting-to-right {
-      top: 150px;
+      top: 9.375em;
       left: 0;
-      box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1), 0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1);
+      box-shadow: 0 0 0 .25em rgba(255, 255, 255, .1), 0 0 0 .5em rgba(255, 255, 255, .1), 0 0 1.25em rgba(255, 255, 255, 1);
       animation: shoting-animate-to-right 3s linear infinite;
 
       &::before {
@@ -296,14 +296,14 @@
         background: linear-gradient(45deg, #fff, transparent);
         position: absolute;
         height: 1px;
-        width: 300px;
+        width: 18.75em;
       }
     }
     
     &.shoting-to-left {
-      top: 150px;
+      top: 9.375em;
       right: 0;
-      box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1), 0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1);
+      box-shadow: 0 0 0 .25em rgba(255, 255, 255, .1), 0 0 0 .5em rgba(255, 255, 255, .1), 0 0 1.25em rgba(255, 255, 255, 1);
       animation: shoting-animate-to-left 3s linear infinite;    
       
       &::before {
@@ -311,7 +311,7 @@
         background: linear-gradient(45deg, transparent, #fff);
         position: absolute;
         width: 1px;
-        height: 300px;
+        height: 18.75em;
       }
     }
     
@@ -321,7 +321,7 @@
         opacity: 1;
       }
       100% {
-        transform: rotate(190deg) translateX(-1500px);
+        transform: rotate(190deg) translateX(-93.75em);
         opacity: 0;
       }
     }
@@ -332,7 +332,7 @@
         opacity: 1;
       }
       100% {
-        transform: rotate(260deg) translateY(-1500px);
+        transform: rotate(260deg) translateY(-93.75em);
         opacity: 0;
       }
     }
@@ -349,7 +349,7 @@
       &::before {
         width: 100%;
         height: 100%;
-        opacity: 0.6;
+        opacity: .6;
         animation: pulsate 1.5s infinite ease-in-out;
       }
       
@@ -360,7 +360,7 @@
 
       @keyframes shine {
         from {
-          transform: scale(0.6);
+          transform: scale(.6);
         }
         to {
           transform: scale(1.2);
@@ -369,7 +369,7 @@
 
       @keyframes pulsate {
         from {
-          opacity: 0.6;
+          opacity: .6;
         }
         to {
           opacity: 0;
@@ -382,6 +382,6 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 368px;
+    top: 23rem;
   }
 }
