--- a/client/src/components/bars/nav-bar.scss
+++ b/client/src/components/bars/nav-bar.scss
@@ -1,5 +1,4 @@
 .nav--background {
-  /* background-color: #356598; */ /*#be3144;*/
   &.light {
     background: linear-gradient(0deg, rgb(118, 201, 255), var(--main-blue));
   }
@@ -24,6 +23,13 @@
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
   padding-right: .2em;
 
+  .clean-button-styles {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+  }
+
   &__list {
     display: flex;
     justify-content: flex-end;
@@ -34,18 +40,12 @@
     height: 100%;
     gap: .2em;
 
-    .clean-button-styles {
-      background: transparent;
-      border: none;
-      cursor: pointer;
-    }
-
     & .theme-icon {
       &__button {
         @extend .clean-button-styles;
       }
       display: flex;
-      padding: 0 1em 0 1em;
+      padding: 0 0 0 1em;
       cursor: pointer;
       opacity: 0.4;
 
@@ -68,13 +68,16 @@
 
   &__link {
     color: var(--main-white);
-    font-size: 1.5em;
-    font-weight: bold;
     text-decoration: none;
-    padding: .5rem 1rem;
-
     display: flex;
     align-items: center;
+    padding: .6rem;
+
+    &.header {
+      font-size: 1.5em;
+      font-weight: bold;  
+      padding: .5rem 1rem;
+    }
 
     &:hover, &:focus {
       @extend .nav--background-focus;
@@ -89,71 +92,94 @@
     }   
   }
 
-  .menu-icon {
-    @extend .clean-button-styles;
-
-    width: .9rem;
-    height: 2.625em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    cursor: pointer;
-    padding: 5px;
-    margin-right: 1rem;
-    border-radius: 5px;
-
-    &:hover + .context-menu,
-    &:focus + .context-menu {
+  .context-menu-container {
+    padding-left: 1em;
+    &:hover > .context-menu,
+    &:focus > .context-menu {
       display: block;
     }
-    
-    .menu-icon-item {
-      width: 100%;
-      height: 0.25em;
-      background-color: var(--main-blue);
-      border-radius: 2px;
-    }
-  }
+
+    .menu-icon {
+      @extend .clean-button-styles;
   
-  /* Estilos para el menú contextual */
-  .context-menu {
-    @extend .nav--background;
+      width: .9rem;
+      height: 2.625em;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      cursor: pointer;
+      padding: 5px;
+      margin-right: 1rem;
+      border-radius: 5px;
+  
 
-    display: none;
-    position: absolute;
-    top: 3.2em;
-    right: .3rem;
-    
-    border-radius: 1rem;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    padding: .3rem;
-
-    svg {
-      height: 1.50em;
-      width: 1.50em;
-      margin-right: .8em;
-
-      &.download-icon {
-        path {
-          fill: white;
-        }
+      
+      .menu-icon-item {
+        width: 100%;
+        height: 0.25em;
+        background-color: var(--main-blue);
+        border-radius: 2px;
       }
     }
-
-    &:hover {
-      display: block;
-    }
     
-    .nav__item {
-      margin: .5rem;
-
-      .nav__button {
-        @extend .nav__link;
-        font-size: 1em;
-        border: .1px black;
-        background-color: transparent;
-        width: 100%;
+    /* Estilos para el menú contextual */
+    .context-menu {
+      @extend .nav--background;
+  
+      display: none;
+      position: absolute;
+      top: 3.2em;
+      right: .3rem;
+      
+      border-radius: 1.5em;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+      padding: .5em;
+  
+      svg {
+        height: 1.50em;
+        width: 1.50em;
+        margin-right: .8em;
+  
+        &.download-icon {
+          path {
+            fill: #FFFFFF;
+          }
+        }
+      }
+  
+      &:hover {
+        display: block;
+      }
+      
+      .nav__item {
+        margin: 0;
+        &:not(&:last-child) {
+          margin: 0 0 0.5rem 0;
+        }
+  
+        .nav__button {
+          @extend .nav__link;
+          font-size: 1em;
+          border: .1px black;
+          background-color: transparent;
+          width: 100%;
+  
+          & .center {
+            display: flex;
+            align-items: center;
+          }
+  
+          &.language {
+            display: flex;
+            justify-content: space-between;
+  
+            &::after {
+              padding-left: .5em;
+              content: url('../../assets/icons/arrow-down.svg');
+            }
+          }
+        }
       }
     }
   }
