--- a/client/src/components/sections/contact-section.scss
+++ b/client/src/components/sections/contact-section.scss
@@ -22,6 +22,12 @@
     text-align: center;
   }
 
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
   &__form {
     padding: 2em 0 2em 0;
 
@@ -43,5 +49,10 @@
         float: right;
       }
     }
+  }
+
+  &__image {
+    padding: 2em;
+    height: 40em;
   }
 }
