--- a/client/src/components/general/card.scss
+++ b/client/src/components/general/card.scss
@@ -6,7 +6,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
 
   &:hover {
     -webkit-transform: scale(1.04);
